Fixed title overlapping on small screens

--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -218,3 +218,9 @@ section div p {
         position: absolute;
     }
 }
+
+@media screen and (max-height: 600px) {
+    .title {
+        margin-top: 26vh;
+    }
+}
